Somewhat working, working on bug fixes when chaining operations

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div class="digit-btn">3</div>
             </div>
             <div class="calc-row"></div>
-                <div class="fn-btn">CLR</div>
+                <div id="clr-btn">CLR</div>
                 <div class="digit-btn">0</div>
-                <div class="fn-btn">=</div>
+                <div id="eq-btn">=</div>
             </div>
             <div class="fn-row">
                 <div class="fn-btn">+</div>
