--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
         <div id="display">0.0</div>
         <div id="key-pad">
             <div class="calc-row">
+                <div id="clr-btn">CLR</div>
+                <div class="fn-btn">÷</div>
+            </div>
+            <div class="calc-row">
                 <div class="digit-btn">7</div>
                 <div class="digit-btn">8</div>
                 <div class="digit-btn">9</div>
+                <div class="fn-btn">x</div>
             </div>
             <div class="calc-row">
                 <div class="digit-btn">4</div>
                 <div class="digit-btn">5</div>
                 <div class="digit-btn">6</div>
+                <div class="fn-btn">-</div>
             </div>
             <div class="calc-row">
                 <div class="digit-btn">1</div>
                 <div class="digit-btn">2</div>
                 <div class="digit-btn">3</div>
-            </div>
-            <div class="calc-row"></div>
-                <div id="clr-btn">CLR</div>
-                <div class="digit-btn">0</div>
-                <div id="eq-btn">=</div>
-            </div>
-            <div class="fn-row">
                 <div class="fn-btn">+</div>
-                <div class="fn-btn">-</div>
-                <div class="fn-btn">x</div>
-                <div class="fn-btn">÷</div>
+            </div>
+            <div class="calc-row" id="last-row">
+                <div class="digit-btn" id="zero">0</div>
+                <div id="eq-btn">=</div>
             </div>
         </div>
     </div>
